--- a/src/input.css
+++ b/src/input.css
@@ -23,3 +23,10 @@ td,
 th {
   padding: 1rem 1rem;
 }
+
+input[type="text"],
+input[type="number"] {
+  padding: 1rem;
+  border: 1px solid rgb(229, 229, 229);
+  border-radius: 1rem;
+}
